--- a/GAME.CATALOG/src/Game.Catalog.Service/Game.Catalog.Service.csproj
+++ b/GAME.CATALOG/src/Game.Catalog.Service/Game.Catalog.Service.csproj
@@ -7,8 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Game.Common" Version="1.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="7.0.4" />
-    <PackageReference Include="MongoDB.driver" Version="2.19.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
   </ItemGroup>
 
