--- a/GAME.CATALOG/src/Game.Catalog.Service/Game.Catalog.Service.csproj
+++ b/GAME.CATALOG/src/Game.Catalog.Service/Game.Catalog.Service.csproj
@@ -7,9 +7,13 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Game.Common" Version="1.0.0" />
+    <PackageReference Include="Game.Common" Version="1.0.2" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="7.0.4" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Game.Catalog.Contracts\Game.Catalog.Contracts.csproj" />
   </ItemGroup>
 
 </Project>
