--- a/GAME.INVENTORY/src/Game.Inventory.Service/Game.Inventory.Service.csproj
+++ b/GAME.INVENTORY/src/Game.Inventory.Service/Game.Inventory.Service.csproj
@@ -7,7 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Game.Common" Version="1.0.0" />
+    <PackageReference Include="Game.Catalog.Contracts" Version="1.0.1" />
+    <PackageReference Include="Game.Common" Version="1.0.2" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="7.0.4" />
     <PackageReference Include="Microsoft.Extensions.Http.Polly" Version="7.0.4" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
